Cool-Parser/gen/CoolRulesParser.java
// Generated from E:/4th CE/2nd Term/PlayGround/Cool-Compiler/src\CoolRules.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CoolRulesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, MULDIV=2, PLUSMIN=3, INTEGER=4, STRING=5, AT=6, COLON=7, COMMA=8, 
		DIVIDE=9, DOT=10, EQUALS=11, LARROW=12, LBRACE=13, LE=14, LPAREN=15, LT=16, 
		MINUS=17, PLUS=18, RARROW=19, RBRACE=20, RPAREN=21, SEMICOLON=22, TIMES=23, 
		TILDE=24, TRUE=25, FALSE=26, CASE=27, CLASS=28, ELSE=29, ESAC=30, FI=31, 
		IF=32, IN=33, INHERITS=34, ISVOID=35, LET=36, LOOP=37, NEW=38, NOT=39, 
		OF=40, POOL=41, THEN=42, WHILE=43, TYPE=44, IDENTIFIER=45, WS=46, ERROR=47;
	public static final int
		RULE_program = 0, RULE_classDefinition = 1, RULE_body = 2, RULE_attr = 3, 
		RULE_method = 4, RULE_parameter = 5, RULE_stmt = 6, RULE_op = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classDefinition", "body", "attr", "method", "parameter", 
			"stmt", "op"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'=>'", null, null, null, null, "'@'", "':'", "','", "'/'", "'.'", 
			"'='", "'<-'", "'{'", "'<='", "'('", "'<'", "'-'", "'+'", "'->'", "'}'", 
			"')'", "';'", "'*'", "'~'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "MULDIV", "PLUSMIN", "INTEGER", "STRING", "AT", "COLON", 
			"COMMA", "DIVIDE", "DOT", "EQUALS", "LARROW", "LBRACE", "LE", "LPAREN", 
			"LT", "MINUS", "PLUS", "RARROW", "RBRACE", "RPAREN", "SEMICOLON", "TIMES", 
			"TILDE", "TRUE", "FALSE", "CASE", "CLASS", "ELSE", "ESAC", "FI", "IF", 
			"IN", "INHERITS", "ISVOID", "LET", "LOOP", "NEW", "NOT", "OF", "POOL", 
			"THEN", "WHILE", "TYPE", "IDENTIFIER", "WS", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CoolRules.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CoolRulesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CoolRulesParser.EOF, 0); }
		public List<ClassDefinitionContext> classDefinition() {
			return getRuleContexts(ClassDefinitionContext.class);
		}
		public ClassDefinitionContext classDefinition(int i) {
			return getRuleContext(ClassDefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolRulesVisitor ) return ((CoolRulesVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(17); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(16);
				classDefinition();
				}
				}
				setState(19); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			setState(21);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDefinitionContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(CoolRulesParser.CLASS, 0); }
		public List<TerminalNode> TYPE() { return getTokens(CoolRulesParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(CoolRulesParser.TYPE, i);
		}
		public TerminalNode LBRACE() { return getToken(CoolRulesParser.LBRACE, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(CoolRulesParser.RBRACE, 0); }
		public TerminalNode SEMICOLON() { return getToken(CoolRulesParser.SEMICOLON, 0); }
		public TerminalNode INHERITS() { return getToken(CoolRulesParser.INHERITS, 0); }
		public ClassDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).enterClassDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).exitClassDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolRulesVisitor ) return ((CoolRulesVisitor<? extends T>)visitor).visitClassDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDefinitionContext classDefinition() throws RecognitionException {
		ClassDefinitionContext _localctx = new ClassDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			match(CLASS);
			setState(24);
			match(TYPE);
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INHERITS) {
				{
				setState(25);
				match(INHERITS);
				setState(26);
				match(TYPE);
				}
			}

			setState(29);
			match(LBRACE);
			setState(30);
			body();
			setState(31);
			match(RBRACE);
			setState(32);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public List<MethodContext> method() {
			return getRuleContexts(MethodContext.class);
		}
		public MethodContext method(int i) {
			return getRuleContext(MethodContext.class,i);
		}
		public List<AttrContext> attr() {
			return getRuleContexts(AttrContext.class);
		}
		public AttrContext attr(int i) {
			return getRuleContext(AttrContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolRulesVisitor ) return ((CoolRulesVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				setState(36);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(34);
					method();
					}
					break;
				case 2:
					{
					setState(35);
					attr();
					}
					break;
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttrContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(CoolRulesParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(CoolRulesParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(CoolRulesParser.TYPE, 0); }
		public TerminalNode SEMICOLON() { return getToken(CoolRulesParser.SEMICOLON, 0); }
		public TerminalNode LARROW() { return getToken(CoolRulesParser.LARROW, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public AttrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).enterAttr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).exitAttr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolRulesVisitor ) return ((CoolRulesVisitor<? extends T>)visitor).visitAttr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttrContext attr() throws RecognitionException {
		AttrContext _localctx = new AttrContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(IDENTIFIER);
			setState(42);
			match(COLON);
			setState(43);
			match(TYPE);
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LARROW) {
				{
				setState(44);
				match(LARROW);
				setState(45);
				stmt(0);
				}
			}

			setState(48);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(CoolRulesParser.IDENTIFIER, 0); }
		public TerminalNode LPAREN() { return getToken(CoolRulesParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CoolRulesParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(CoolRulesParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(CoolRulesParser.TYPE, 0); }
		public TerminalNode LBRACE() { return getToken(CoolRulesParser.LBRACE, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(CoolRulesParser.RBRACE, 0); }
		public TerminalNode SEMICOLON() { return getToken(CoolRulesParser.SEMICOLON, 0); }
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CoolRulesParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CoolRulesParser.COMMA, i);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).exitMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolRulesVisitor ) return ((CoolRulesVisitor<? extends T>)visitor).visitMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(IDENTIFIER);
			setState(51);
			match(LPAREN);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(52);
				parameter();
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(53);
					match(COMMA);
					setState(54);
					parameter();
					}
					}
					setState(59);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(62);
			match(RPAREN);
			setState(63);
			match(COLON);
			setState(64);
			match(TYPE);
			setState(65);
			match(LBRACE);
			setState(66);
			stmt(0);
			setState(67);
			match(RBRACE);
			setState(68);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(CoolRulesParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(CoolRulesParser.COLON, 0); }
		public TerminalNode TYPE() { return getToken(CoolRulesParser.TYPE, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).exitParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolRulesVisitor ) return ((CoolRulesVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(IDENTIFIER);
			setState(71);
			match(COLON);
			setState(72);
			match(TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(CoolRulesParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(CoolRulesParser.IDENTIFIER, i);
		}
		public TerminalNode LPAREN() { return getToken(CoolRulesParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CoolRulesParser.RPAREN, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CoolRulesParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CoolRulesParser.COMMA, i);
		}
		public TerminalNode IF() { return getToken(CoolRulesParser.IF, 0); }
		public TerminalNode THEN() { return getToken(CoolRulesParser.THEN, 0); }
		public TerminalNode FI() { return getToken(CoolRulesParser.FI, 0); }
		public TerminalNode ELSE() { return getToken(CoolRulesParser.ELSE, 0); }
		public TerminalNode WHILE() { return getToken(CoolRulesParser.WHILE, 0); }
		public TerminalNode LOOP() { return getToken(CoolRulesParser.LOOP, 0); }
		public TerminalNode POOL() { return getToken(CoolRulesParser.POOL, 0); }
		public TerminalNode LBRACE() { return getToken(CoolRulesParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CoolRulesParser.RBRACE, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(CoolRulesParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(CoolRulesParser.SEMICOLON, i);
		}
		public TerminalNode LET() { return getToken(CoolRulesParser.LET, 0); }
		public TerminalNode IN() { return getToken(CoolRulesParser.IN, 0); }
		public List<TerminalNode> COLON() { return getTokens(CoolRulesParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(CoolRulesParser.COLON, i);
		}
		public List<TerminalNode> TYPE() { return getTokens(CoolRulesParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(CoolRulesParser.TYPE, i);
		}
		public List<TerminalNode> LARROW() { return getTokens(CoolRulesParser.LARROW); }
		public TerminalNode LARROW(int i) {
			return getToken(CoolRulesParser.LARROW, i);
		}
		public TerminalNode CASE() { return getToken(CoolRulesParser.CASE, 0); }
		public TerminalNode OF() { return getToken(CoolRulesParser.OF, 0); }
		public TerminalNode ESAC() { return getToken(CoolRulesParser.ESAC, 0); }
		public TerminalNode NEW() { return getToken(CoolRulesParser.NEW, 0); }
		public TerminalNode ISVOID() { return getToken(CoolRulesParser.ISVOID, 0); }
		public TerminalNode TILDE() { return getToken(CoolRulesParser.TILDE, 0); }
		public TerminalNode NOT() { return getToken(CoolRulesParser.NOT, 0); }
		public TerminalNode INTEGER() { return getToken(CoolRulesParser.INTEGER, 0); }
		public TerminalNode STRING() { return getToken(CoolRulesParser.STRING, 0); }
		public TerminalNode TRUE() { return getToken(CoolRulesParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(CoolRulesParser.FALSE, 0); }
		public TerminalNode MULDIV() { return getToken(CoolRulesParser.MULDIV, 0); }
		public TerminalNode PLUSMIN() { return getToken(CoolRulesParser.PLUSMIN, 0); }
		public OpContext op() {
			return getRuleContext(OpContext.class,0);
		}
		public TerminalNode DOT() { return getToken(CoolRulesParser.DOT, 0); }
		public TerminalNode AT() { return getToken(CoolRulesParser.AT, 0); }
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolRulesListener ) ((CoolRulesListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolRulesVisitor ) return ((CoolRulesVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		return stmt(0);
	}

	private StmtContext stmt(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		StmtContext _localctx = new StmtContext(_ctx, _parentState);
		StmtContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_stmt, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(75);
				match(IDENTIFIER);
				setState(76);
				match(LPAREN);
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << STRING) | (1L << LBRACE) | (1L << LPAREN) | (1L << TILDE) | (1L << TRUE) | (1L << FALSE) | (1L << CASE) | (1L << IF) | (1L << ISVOID) | (1L << LET) | (1L << NEW) | (1L << NOT) | (1L << WHILE) | (1L << IDENTIFIER))) != 0)) {
					{
					setState(77);
					stmt(0);
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(78);
						match(COMMA);
						setState(79);
						stmt(0);
						}
						}
						setState(84);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(87);
				match(RPAREN);
				}
				break;
			case 2:
				{
				setState(88);
				match(IF);
				setState(89);
				stmt(0);
				setState(90);
				match(THEN);
				setState(91);
				stmt(0);
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ELSE) {
					{
					setState(92);
					match(ELSE);
					setState(93);
					stmt(0);
					}
				}

				setState(96);
				match(FI);
				}
				break;
			case 3:
				{
				setState(98);
				match(WHILE);
				setState(99);
				stmt(0);
				setState(100);
				match(LOOP);
				setState(101);
				stmt(0);
				setState(102);
				match(POOL);
				}
				break;
			case 4:
				{
				setState(104);
				match(LBRACE);
				setState(108); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(105);
					stmt(0);
					setState(106);
					match(SEMICOLON);
					}
					}
					setState(110); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << STRING) | (1L << LBRACE) | (1L << LPAREN) | (1L << TILDE) | (1L << TRUE) | (1L << FALSE) | (1L << CASE) | (1L << IF) | (1L << ISVOID) | (1L << LET) | (1L << NEW) | (1L << NOT) | (1L << WHILE) | (1L << IDENTIFIER))) != 0) );
				setState(112);
				match(RBRACE);
				}
				break;
			case 5:
				{
				setState(114);
				match(LET);
				setState(122); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(115);
					match(IDENTIFIER);
					setState(116);
					match(COLON);
					setState(117);
					match(TYPE);
					setState(120);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==LARROW) {
						{
						setState(118);
						match(LARROW);
						setState(119);
						stmt(0);
						}
					}

					}
					}
					setState(124); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==IDENTIFIER );
				setState(126);
				match(IN);
				setState(127);
				stmt(16);
				}
				break;
			case 6:
				{
				setState(128);
				match(CASE);
				setState(129);
				stmt(0);
				setState(130);
				match(OF);
				setState(138); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(131);
					match(IDENTIFIER);
					setState(132);
					match(COLON);
					setState(133);
					match(TYPE);
					setState(134);
					match(T__0);
					setState(135);
					stmt(0);
					setState(136);
					match(SEMICOLON);
					}
					}
					setState(140); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==IDENTIFIER );
				setState(142);
				match(ESAC);
				}
				break;
			case 7:
				{
				setState(144);
				match(NEW);
				setState(145);
				match(TYPE);
				}
				break;
			case 8:
				{
				setState(146);
				match(ISVOID);
				setState(147);
				stmt(13);
				}
				break;
			case 9:
				{
				setState(148);
				match(TILDE);
				setState(149);
				stmt(12);
				}
				break;
			case 10:
				{
				setState(150);
				match(NOT);
				setState(151);
				stmt(8);
				}
				break;
			case 11:
				{
				setState(152);
				match(LPAREN);
				setState(153);
				stmt(0);
				setState(154);
				match(RPAREN);
				}
				break;
			case 12:
				{
				setState(156);
				match(IDENTIFIER);
				}
				break;
			case 13:
				{
				setState(157);
				match(INTEGER);
				}
				break;
			case 14:
				{
				setState(158);
				match(STRING);
				}
				break;
			case 15:
				{
				setState(159);
				match(TRUE);
				}
				break;
			case 16:
				{
				setState(160);
				match(FALSE);
				}
				break;
			case 17:
				{
				setState(161);
				match(IDENTIFIER);
				setState(162);
				match(LARROW);
				setState(163);
				stmt(1);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(197);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(195);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
					case 1:
						{
						_localctx = new StmtContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_stmt);
						setState(166);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(167);
						match(MULDIV);
						setState(168);
						stmt(12);
						}
						break;
					case 2:
						{
						_localctx = new StmtContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_stmt);
						setState(169);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(170);
						match(PLUSMIN);
						setState(171);
						stmt(11);
						}
						break;
					case 3:
						{
						_localctx = new StmtContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_stmt);
						setState(172);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(173);
						op();
						setState(174);
						stmt(10);
						}
						break;
					case 4:
						{
						_localctx = new StmtContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_stmt);
						setState(176);
						if (!(precpred(_ctx, 21))) throw new FailedPredicateException(this, "precpred(_ctx, 21)");
						setState(179);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==AT) {
							{
							setState(177);
							match(AT);
							setState(178);
							match(TYPE);
							}
						}

						setState(181);
						match(DOT);
						setState(182);
						match(IDENTIFIER);
						setState(183);
						match(LPAREN);
						setState(192);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << STRING) | (1L << LBRACE) | (1L << LPAREN) | (1L << TILDE) | (1L << TRUE) | (1L << FALSE) | (1L << CASE) | (1L << IF) | (1L << ISVOID) | (1L << LET) | (1L << NEW) | (1L << NOT) | (1L << WHILE) | (1L << IDENTIFIER))) != 0)) {
							{
							setState(184);
							stmt(0);
							setState(189);
							_errHandler.sync(this);
							_la = _input.LA(1);
							while (_la==COMMA) {
								{
								{
								setState(185);
								match(COMMA);
								setState(186);
								stmt(0);
								}
								}
								setState(191);
								_errHandler.sync(this);
								_la = _input.LA(1);
							}
							}
						}

						setState(194);
						match(RPAREN);
						}
						break;
					}
					} 
				}
				setState(199);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
